# story-line-counter

./: .gitignore  Cargo.toml  README.md  cli.yml  points.json
src/: args_parser.rs  errors.rs  main.rs
src/repo/: core.rs  diff.rs  mod.rs
