[package]

## Rust configuration
edition = "2018"
target = ["bin"]
publish = false # never publish this utility

## Project Definition
name = "story-line-counter"
version = "0.1.0"

## Project Metadata
keywords = ["git", "version1", "jira"]
categories = ["command-line-utilities"]
authors = ["Lea Fairbanks <lea.rae.fairbanks@gmail.com>"]

## Repository information
repository = "https://github.com/darunada/story-line-counter"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "~0.9"
regex = "~1.2"

# CLI interface
clap = {version = "~2.33", features = ["yaml"]}

# serialization
serde = { version = "~1.0", features = ["derive"] }
serde_json = "1.0"
